--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
-    <string name="app_name">StockPrice</string>
+    <!-- Name Fragment -->
+    <string name="app_name">Stock Price</string>
+    <string name="list_fragment">List Stock</string>
+    <string name="details_fragmnet">Details stock</string>
 
     <!-- Details Fragment -->
     <string name="company_name">Company name</string>
     <string name="exchange">Exchange</string>
     <string name="currency">Currency</string>
     <string name="date">Date</string>
-    <string name="real_price">Real time price</string>
+    <string name="end_price">Closing price</string>
 
     <!-- Preference Titles -->
     <string name="messages_header">Theme</string>
@@ -24,17 +27,6 @@
     <!-- About app Preferences -->
     <string name="about_app_title">GitHub</string>
     <string name="data_intent">https://github.com/PetrGrebnev/StockPrice</string>
-    <string name="title_activity_settings">SettingsActivity</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="sync_header">Sync</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="title_activity_settings">Settings</string>>
 
 </resources>
