--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="data_intent">https://github.com/PetrGrebnev/StockPrice</string>
     <string name="title_activity_settings">Settings</string>>
 
+    <string name="error_details">Error: no info available </string>
+
 </resources>
