refactoring ViewModel, delete DataBinding, newAnimation

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,4 +30,6 @@
     <string name="title_activity_settings">Настройки</string>
 
     <string name="error_details">Ошибка: информация отсутствует</string>
+    <string name="not_internet_connection">Отсутсвтует подключение к интернету</string>
+
 </resources>
