--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="title_activity_settings">Settings</string>>
 
     <string name="error_details">Error: no info available </string>
+    <string name="not_internet_connection">Not internet connection</string>
 
 </resources>
